# diffhouse

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  404.html  BENCHMARKS.md  CITATION.cff  HACKING.md  LICENSE.md  MANIFEST.in  README.md  THIRD_PARTY_LICENSES.md  index.html  objects.inv  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: benchmark.yml  build-docs.yml  check-docs.yml  compatibility-test.yml  msv-test.yml  os-test.yml  test.yml
api-reference/: index.html
benchmarks/: index.html
docs/: diffhouse.html  index.html  mkdocs.yml  objects.inv  search.js
docs/api-reference/: index.html
docs/src/: api-reference.md  benchmarks.md  index.md  user-guide.md
docs/src/reference/: branch.md  commit.md  diff.md  extractor.md  filemod.md  git-object.md  index.md  repo.md  tag.md
reference/: index.html
reference/branch/: index.html
reference/commit/: index.html
reference/diff/: index.html
reference/extractor/: index.html
reference/filemod/: index.html
reference/git-object/: index.html
reference/repo/: index.html
reference/tag/: index.html
repo/: __init__.py  clone.py  core.py  log.py
scripts/: bench.py
search/: search_index.json
site/: mkdocs.yml
src/: engine.py  git.py  git_cli.py  remote.py  repo.py  slim_clone.py
src/diffhouse/: __init__.py  cleanup.py  cloning.py  config.py  constants.py  diffs.py  engine.py  git.py  logger.py  logging.yml  repo.py  slim_clone.py  utils.py  view.py
src/diffhouse/api/: __init__.py  exceptions.py  extractor.py  repo.py
src/diffhouse/core/: __init__.py  branches.py  commits.py  diffs.py
src/diffhouse/engine/: __init__.py  branches.py  changed_files.py  commits.py  constants.py  diffs.py  revisions.py  tags.py  utils.py
src/diffhouse/entities/: __init__.py  branch.py  changed_file.py  commit.py  diff.py  file_mod.py  filemod.py  git_object.py  tag.py
src/diffhouse/git/: __init__.py  cli.py  cloning.py
src/diffhouse/pipelines/: __init__.py  branch_pipeline.py  changed_file_pipeline.py  commit_pipeline.py  constants.py  diff_pipeline.py  file_mod_pipeline.py  tag_pipeline.py  utils.py
src/diffhouse/utils/: cleanup.py  logger.py
tests/: __init__.py  constants.py  dummy.py  fixtures.py  github.py  test_cleanup.py  test_extractor.py  test_repo.py  test_validity.py  test_vs_github.py  test_vs_local.py  utils.py
user-guide/: index.html
