[project]
name = "diffhouse"
version = "0.3.0"
dependencies = [
  "packaging>=25.0",
  "validators>=0.35.0",
]
description = "Git metadata extractor for analysts."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/vupdivup/diffhouse"

[build-system]
requires = ["uv_build>=0.8.23"]
build-backend = "uv_build"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "D", "I"]
ignore = ["D100", "D105", "D203", "D213", "E501"]

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mkdocs>=1.6.1",
    "mkdocs-include-markdown-plugin>=7.2.0",
    "mkdocs-material>=9.6.21",
    "mkdocstrings-python>=1.18.2",
    "pandas>=2.3.3",
    "polars>=1.33.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "ruff>=0.13.2",
]
