[project]
name = "diffhouse"
version = "2.0.2"
dependencies = [
  "packaging>=25.0",
  "regex>=2025.9.18",
  "validators>=0.35.0",
  "xxhash>=3.6.0",
]
description = "Repository mining tool for structuring Git metadata at scale."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*", "THIRD_PARTY_LICENSES*"]

[project.urls]
Documentation = "https://vupdivup.github.io/diffhouse/"
Repository = "https://github.com/vupdivup/diffhouse"

[project.optional-dependencies]
pandas = [
    "pandas>=2.0.0",
]
polars = [
    "polars>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.8.23"]
build-backend = "uv_build"

[tool.uv]
default-groups = ["dev", "test"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["A", "ANN", "ARG", "B", "C4", "E", "F", "D", "I", "SIM"]
ignore = ["ANN204", "D100", "D203", "D213", "E501"]

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
benchmark = [
    "pydriller>=2.9",
    "pyperf>=2.9.0",
]
dev = [
    "jupyter>=1.1.1",
    "polars[timezone]>=1.33.1",
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
]
docs = [
    "markdown-callouts>=0.4.0",
    "mkdocs>=1.6.1",
    "mkdocs-include-markdown-plugin>=7.2.0",
    "mkdocs-material>=9.6.21",
    "mkdocstrings-python>=1.18.2",
]
perf = [
    "pyinstrument>=5.1.1",
    "pympler>=1.1",
]
test = [
    "psutil>=7.1.0",
    "pytest>=8.4.2",
    "rapidfuzz>=3.14.1",
    "requests>=2.32.5",
]
